--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1268,6 +1268,10 @@
       .svg {
         margin-right: 10px;
       }
+
+      .filter.dropdown > .ui.button {
+        margin-right: 0;
+      }
     }
 
     .comment.form {
